Create contact mechanism in test case

--- a/modules/coop_party/test_case/test_case.cfg
+++ b/modules/coop_party/test_case/test_case.cfg
@@ -9,3 +9,4 @@ percent_of_couple = 60
 percent_of_couple_with_same_name = 50
 percent_of_single_father = 20
 percent_of_single_mother = 30
+phone_prefix = +33
