Split billing module in billing and individual billing

--- a/modules/test_module/tryton.cfg
+++ b/modules/test_module/tryton.cfg
@@ -16,6 +16,7 @@ depends:
     insurance_collective_subscription
     commission
     billing
+    billing_individual
     coop_account_payment
     coop_account_payment_sepa
 xml:
