--- a/modules/insurance_contract_subscription/tryton.cfg
+++ b/modules/insurance_contract_subscription/tryton.cfg
@@ -4,7 +4,7 @@ depends:
     res
     process
     insurance_contract
-    billing
+    billing_individual
     distribution_product
 xml:
     subscription_process.xml
