--- a/test_case/test_case.cfg
+++ b/test_case/test_case.cfg
@@ -23,6 +23,7 @@ modules:
     insurance_collective_subscription
     commission
     billing
+    billing_individual
     coop_account_payment
     coop_account_payment_sepa
     life_billing_collective_fr
