Create Rate Note Reception Wizard

--- a/modules/life_billing_collective_fr/tryton.cfg
+++ b/modules/life_billing_collective_fr/tryton.cfg
@@ -7,6 +7,7 @@ depends:
     life_product
     insurance_contract
     insurance_collective
+    billing_individual
 xml:
     party.xml
     product.xml
