New module commission collective

--- a/test_case/test_case.cfg
+++ b/test_case/test_case.cfg
@@ -22,6 +22,7 @@ modules:
     life_contract_collective
     insurance_collective_subscription
     commission
+    commission_collective
     billing
     billing_individual
     coop_account_payment
