Move insurance_party data to insurance_product and insurance_contract

--- a/modules/insurance_contract/tryton.cfg
+++ b/modules/insurance_contract/tryton.cfg
@@ -4,7 +4,6 @@ depends:
     res
     process
     party
-    insurance_party
     insurance_product
     contract
 xml:
@@ -12,3 +11,4 @@ xml:
     subscription_process.xml
     renewal.xml
     expense.xml
+    party.xml
