--- a/modules/insurance_product/tryton.cfg
+++ b/modules/insurance_product/tryton.cfg
@@ -2,11 +2,11 @@
 depends:
     ir
     res
-    insurance_party
     coop_account
     coop_process
     offered
 xml:
+    party.xml
     product.xml
     coverage.xml
     benefit.xml
