Migration to tryton bank module

--- a/modules/coop_bank/tryton.cfg
+++ b/modules/coop_bank/tryton.cfg
@@ -2,8 +2,9 @@
 depends:
     ir
     res
-    currency
-    coop_party_fr
+    bank
+    coop_utils
+    coop_party
 xml:
     party.xml
     bank.xml
