--- a/test_case/test_case.cfg
+++ b/test_case/test_case.cfg
@@ -10,7 +10,10 @@ currency = EUR
 logfile = ../../logs/proteus_logs.log
 only_install = True
 modules:
-    party_bank
+    coop_party
+    coop_party_fr
+    coop_bank
+    bank_fr
     table
     health_fr
     property_product
