Make bank module exportable

--- a/test_case/test_case.cfg
+++ b/test_case/test_case.cfg
@@ -8,7 +8,7 @@ create_db = False
 language = fr_FR
 currency = EUR
 logfile = ../../logs/proteus_logs.log
-only_install = True
+only_install = False
 modules:
     coop_party
     coop_party_fr
