Migrate table test_case to new framework

--- a/test_case/test_case.cfg
+++ b/test_case/test_case.cfg
@@ -8,7 +8,7 @@ create_db = False
 language = fr_FR
 currency = EUR
 logfile = ../../logs/proteus_logs.log
-only_install = False
+only_install = True
 modules:
     coop_translation
     coop_party
