Replace tryton translations

--- a/test_case/test_case.cfg
+++ b/test_case/test_case.cfg
@@ -10,6 +10,7 @@ currency = EUR
 logfile = ../../logs/proteus_logs.log
 only_install = False
 modules:
+    coop_translation
     coop_party
     coop_party_fr
     coop_bank
