Remove deprecated code

--- a/modules/insurance_contract/tryton.cfg
+++ b/modules/insurance_contract/tryton.cfg
@@ -8,7 +8,7 @@ depends:
     contract
 xml:
     contract.xml
-    subscription_process.xml
     renewal.xml
     expense.xml
     party.xml
+    tree_element.xml
