Add coop_company module

--- a/modules/offered/tryton.cfg
+++ b/modules/offered/tryton.cfg
@@ -3,11 +3,10 @@ depends:
     ir
     res
     coop_utils
-    company
+    coop_company
     rule_engine
 xml:
     offered.xml
     complementary_data.xml
     coverage.xml
     export.xml
-    test_case.xml
