Create coop_currency module

--- a/modules/coop_party/tryton.cfg
+++ b/modules/coop_party/tryton.cfg
@@ -5,6 +5,9 @@ depends:
     party
     coop_utils
     coop_country
+extras_depend:
+    party_siret
+    account
 xml:
     party.xml
     address.xml
