--- a/modules/claim/tryton.cfg
+++ b/modules/claim/tryton.cfg
@@ -3,8 +3,9 @@ depends:
     ir
     res
     process
-    insurance_contract
+    coop_currency
     coop_company
+    insurance_contract
 xml:
     claim.xml
     party.xml
