Move coop_utils / account connector in coop_account

--- a/modules/billing_individual/tryton.cfg
+++ b/modules/billing_individual/tryton.cfg
@@ -4,9 +4,9 @@ depends:
     res
     coop_utils
     coop_company
-    bank
+    coop_bank
     insurance_contract
-    account
+    coop_account
     billing
     collection
 xml:
