--- a/modules/commission/tryton.cfg
+++ b/modules/commission/tryton.cfg
@@ -7,9 +7,9 @@ depends:
     insurance_contract
     distribution
 xml:
+    offered.xml
     contract.xml
-    plan.xml
-    agreement.xml
+    billing.xml
     party.xml
     distribution.xml
     account.xml
