--- a/modules/contract/tryton.cfg
+++ b/modules/contract/tryton.cfg
@@ -7,6 +7,8 @@ depends:
     insurance_product
 xml:
     contract.xml
+    clause.xml
+    service.xml
     rule_engine.xml
     party.xml
     wizard.xml
