--- a/modules/insurance_contract/tryton.cfg
+++ b/modules/insurance_contract/tryton.cfg
@@ -9,7 +9,9 @@ depends:
     contract
 xml:
     contract.xml
+    service.xml
     renewal.xml
+    clause.xml
     expense.xml
     party.xml
     tree_element.xml
