--- a/modules/insurance_collective/tryton.cfg
+++ b/modules/insurance_collective/tryton.cfg
@@ -6,7 +6,7 @@ depends:
     insurance_product
     insurance_contract
 xml:
-    product.xml
+    offered.xml
     collective_product.xml
-    collective_contract.xml
+    contract.xml
     tag.xml
