--- a/modules/life_billing_collective_fr/tryton.cfg
+++ b/modules/life_billing_collective_fr/tryton.cfg
@@ -10,7 +10,7 @@ depends:
     billing_individual
 xml:
     party.xml
-    product.xml
+    offered.xml
     contract.xml
     billing.xml
     rule_engine.xml
