Renaming module cash_value_contract with contract_cash_value

--- a/modules/test_module/tryton.cfg
+++ b/modules/test_module/tryton.cfg
@@ -34,7 +34,7 @@ depends:
     property_product
     coop_country
     life_claim
-    cash_value_contract
+    contract_cash_value
     process
     insurance_collective
     insurance_product
