--- a/test_case/test_case.cfg
+++ b/test_case/test_case.cfg
@@ -32,4 +32,4 @@ modules:
     coop_account_payment_sepa
     life_billing_collective_fr
     insurance_collection
-    cash_value_contract
+    contract_cash_value
