Renaming module cash_value_product with offered_cash_value

--- a/modules/contract_cash_value/tryton.cfg
+++ b/modules/contract_cash_value/tryton.cfg
@@ -5,7 +5,7 @@ depends:
     collection
     insurance_contract
     life_contract
-    cash_value_product
+    offered_cash_value
     life_contract_subscription
 xml:
     contract.xml
