--- a/modules/test_module/tryton.cfg
+++ b/modules/test_module/tryton.cfg
@@ -42,7 +42,7 @@ depends:
     life_product
     health
     coop_process
-    cash_value_product
+    offered_cash_value
     bank_fr
     loan_claim
     coop_party_fr
