Renaming module commission_collective with commission_group

--- a/modules/test_module/tryton.cfg
+++ b/modules/test_module/tryton.cfg
@@ -22,7 +22,7 @@ depends:
     coop_translation
     collection
     coop_bank
-    commission_collective
+    commission_group
     insurance_collective_subscription
     task_manager
     rule_engine
