--- a/test_case/test_case.cfg
+++ b/test_case/test_case.cfg
@@ -25,7 +25,7 @@ modules:
     loan_claim
     insurance_collective_subscription
     commission
-    commission_collective
+    commission_group
     billing
     billing_individual
     coop_account_payment
