Renaming module coop_account with account_cog

--- a/modules/billing_individual/tryton.cfg
+++ b/modules/billing_individual/tryton.cfg
@@ -6,7 +6,7 @@ depends:
     coop_company
     coop_bank
     insurance_contract
-    coop_account
+    account_cog
     billing
     collection
 xml:
