Renaming module coop_account_payment with account_payment_cog

--- a/test_case/test_case.cfg
+++ b/test_case/test_case.cfg
@@ -28,7 +28,7 @@ modules:
     commission_group
     billing
     billing_individual
-    coop_account_payment
+    account_payment_cog
     coop_account_payment_sepa
     life_billing_collective_fr
     insurance_collection
