Renaming module coop_bank with bank_cog

--- a/modules/billing_individual/tryton.cfg
+++ b/modules/billing_individual/tryton.cfg
@@ -4,7 +4,7 @@ depends:
     res
     coop_utils
     coop_company
-    coop_bank
+    bank_cog
     insurance_contract
     account_cog
     billing
