--- a/modules/test_module/tryton.cfg
+++ b/modules/test_module/tryton.cfg
@@ -21,7 +21,7 @@ depends:
     coop_utils
     coop_translation
     collection
-    coop_bank
+    bank_cog
     commission_group
     insurance_collective_subscription
     task_manager
