--- a/test_case/test_case.cfg
+++ b/test_case/test_case.cfg
@@ -13,7 +13,7 @@ modules:
     coop_translation
     coop_party
     coop_party_fr
-    coop_bank
+    bank_cog
     bank_fr
     table
     health_fr
