Renaming module coop_company with company_cog

--- a/modules/test_module/tryton.cfg
+++ b/modules/test_module/tryton.cfg
@@ -9,7 +9,7 @@ depends:
     endorsement
     health_fr
     commission
-    coop_company
+    company_cog
     distribution
     account_payment_sepa_cog
     life_claim_process
