--- a/modules/test_module/tryton.cfg
+++ b/modules/test_module/tryton.cfg
@@ -32,7 +32,7 @@ depends:
     contract
     table
     property_product
-    coop_country
+    country_cog
     life_claim
     contract_cash_value
     process
