Renaming module coop_party with party_cog

--- a/test_case/test_case.cfg
+++ b/test_case/test_case.cfg
@@ -11,7 +11,7 @@ logfile = ../../logs/proteus_logs.log
 only_install = False
 modules:
     coop_translation
-    coop_party
+    party_cog
     coop_party_fr
     bank_cog
     bank_fr
