--- a/modules/test_module/tryton.cfg
+++ b/modules/test_module/tryton.cfg
@@ -3,7 +3,7 @@ depends:
     account_payment_cog
     loan
     life_billing_collective_fr
-    coop_party
+    party_cog
     life_contract_subscription
     insurance_contract
     endorsement
