Renaming module coop_party_fr with party_fr

--- a/modules/test_module/tryton.cfg
+++ b/modules/test_module/tryton.cfg
@@ -45,7 +45,7 @@ depends:
     offered_cash_value
     bank_fr
     loan_claim
-    coop_party_fr
+    party_fr
     claim
     billing
     account_cog
