--- a/test_case/test_case.cfg
+++ b/test_case/test_case.cfg
@@ -12,7 +12,7 @@ only_install = False
 modules:
     coop_translation
     party_cog
-    coop_party_fr
+    party_fr
     bank_cog
     bank_fr
     table
