Renaming module coop_process with process_cog

--- a/modules/test_module/tryton.cfg
+++ b/modules/test_module/tryton.cfg
@@ -41,7 +41,7 @@ depends:
     account_payment
     life_product
     health
-    coop_process
+    process_cog
     offered_cash_value
     bank_fr
     loan_claim
