--- a/test_case/test_case.cfg
+++ b/test_case/test_case.cfg
@@ -20,7 +20,7 @@ modules:
     property_product
     life_contract_subscription
     task_manager
-    coop_process
+    process_cog
     life_claim_process
     loan_claim
     insurance_collective_subscription
