Renaming module coop_translation with cog_translation

--- a/test_case/test_case.cfg
+++ b/test_case/test_case.cfg
@@ -10,7 +10,7 @@ currency = EUR
 logfile = ../../logs/proteus_logs.log
 only_install = False
 modules:
-    coop_translation
+    cog_translation
     party_cog
     party_fr
     bank_cog
