--- a/modules/test_module/tryton.cfg
+++ b/modules/test_module/tryton.cfg
@@ -19,7 +19,7 @@ depends:
     insurance_contract_subscription
     currency_cog
     coop_utils
-    coop_translation
+    cog_translation
     collection
     bank_cog
     commission_group
