Renaming module distribution_product with offered_distribution

--- a/modules/insurance_contract_subscription/tryton.cfg
+++ b/modules/insurance_contract_subscription/tryton.cfg
@@ -5,7 +5,7 @@ depends:
     process
     insurance_contract
     billing_individual
-    distribution_product
+    offered_distribution
 xml:
     process.xml
 
