--- a/modules/test_module/tryton.cfg
+++ b/modules/test_module/tryton.cfg
@@ -27,7 +27,7 @@ depends:
     task_manager
     rule_engine
     life_contract
-    distribution_product
+    offered_distribution
     offered
     contract
     table
