Renaming module health_fr with contract_insurance_health_fr

--- a/modules/test_module/tryton.cfg
+++ b/modules/test_module/tryton.cfg
@@ -7,7 +7,7 @@ depends:
     life_contract_subscription
     insurance_contract
     endorsement
-    health_fr
+    contract_insurance_health_fr
     commission
     company_cog
     distribution
