--- a/test_case/test_case.cfg
+++ b/test_case/test_case.cfg
@@ -16,7 +16,7 @@ modules:
     bank_cog
     bank_fr
     table
-    health_fr
+    contract_insurance_health_fr
     property_product
     life_contract_subscription
     task_manager
