Renaming module insurance_collective with contract_group

--- a/modules/insurance_collective_subscription/tryton.cfg
+++ b/modules/insurance_collective_subscription/tryton.cfg
@@ -3,7 +3,7 @@ depends:
     ir
     res
     process
-    insurance_collective
+    contract_group
     insurance_contract_subscription
 xml:
     wizard.xml
