--- a/modules/life_billing_collective_fr/tryton.cfg
+++ b/modules/life_billing_collective_fr/tryton.cfg
@@ -6,7 +6,7 @@ depends:
     table
     life_product
     insurance_contract
-    insurance_collective
+    contract_group
     billing_individual
 xml:
     party.xml
