--- a/modules/test_module/tryton.cfg
+++ b/modules/test_module/tryton.cfg
@@ -36,7 +36,7 @@ depends:
     life_claim
     contract_cash_value
     process
-    insurance_collective
+    contract_group
     insurance_product
     account_payment
     life_product
