Renaming module insurance_collection with collection_insurance

--- a/modules/test_module/tryton.cfg
+++ b/modules/test_module/tryton.cfg
@@ -13,7 +13,7 @@ depends:
     distribution
     account_payment_sepa_cog
     life_claim_process
-    insurance_collection
+    collection_insurance
     claim_process
     billing_individual
     insurance_contract_subscription
