--- a/test_case/test_case.cfg
+++ b/test_case/test_case.cfg
@@ -31,5 +31,5 @@ modules:
     account_payment_cog
     account_payment_sepa_cog
     life_billing_collective_fr
-    insurance_collection
+    collection_insurance
     contract_cash_value
