Renaming module insurance_collective_subscription with contract_group_process

--- a/test_case/test_case.cfg
+++ b/test_case/test_case.cfg
@@ -23,7 +23,7 @@ modules:
     process_cog
     life_claim_process
     loan_claim
-    insurance_collective_subscription
+    contract_group_process
     commission
     commission_group
     billing
