--- a/modules/test_module/tryton.cfg
+++ b/modules/test_module/tryton.cfg
@@ -23,7 +23,7 @@ depends:
     collection
     bank_cog
     commission_group
-    insurance_collective_subscription
+    contract_group_process
     task_manager
     rule_engine
     life_contract
