Renaming module insurance_contract with contract_insurance

--- a/modules/billing_individual/tryton.cfg
+++ b/modules/billing_individual/tryton.cfg
@@ -5,7 +5,7 @@ depends:
     cog_utils
     company_cog
     bank_cog
-    insurance_contract
+    contract_insurance
     account_cog
     billing
     collection
