--- a/modules/commission/tryton.cfg
+++ b/modules/commission/tryton.cfg
@@ -4,7 +4,7 @@ depends:
     res
     cog_utils
     billing_individual
-    insurance_contract
+    contract_insurance
     distribution
 xml:
     offered.xml
