--- a/modules/contract_cash_value/tryton.cfg
+++ b/modules/contract_cash_value/tryton.cfg
@@ -3,7 +3,7 @@ depends:
     ir
     res
     collection
-    insurance_contract
+    contract_insurance
     life_contract
     offered_cash_value
     life_contract_subscription
