--- a/modules/contract_group/tryton.cfg
+++ b/modules/contract_group/tryton.cfg
@@ -4,7 +4,7 @@ depends:
     res
     cog_utils
     insurance_product
-    insurance_contract
+    contract_insurance
 xml:
     offered.xml
     collective_product.xml
