--- a/modules/health/tryton.cfg
+++ b/modules/health/tryton.cfg
@@ -5,7 +5,7 @@ depends:
     party
     cog_utils
     insurance_product
-    insurance_contract
+    contract_insurance
 xml:
     health.xml
     party.xml
