--- a/modules/insurance_contract_subscription/tryton.cfg
+++ b/modules/insurance_contract_subscription/tryton.cfg
@@ -3,7 +3,7 @@ depends:
     ir
     res
     process
-    insurance_contract
+    contract_insurance
     billing_individual
     offered_distribution
 xml:
