--- a/modules/loan/tryton.cfg
+++ b/modules/loan/tryton.cfg
@@ -4,7 +4,7 @@ depends:
     res
     bank
     insurance_product
-    insurance_contract
+    contract_insurance
     billing_individual
 xml:
     loan.xml
