--- a/modules/test_module/tryton.cfg
+++ b/modules/test_module/tryton.cfg
@@ -5,7 +5,7 @@ depends:
     life_billing_collective_fr
     party_cog
     life_contract_subscription
-    insurance_contract
+    contract_insurance
     endorsement
     contract_insurance_health_fr
     commission
