--- a/modules/claim/tryton.cfg
+++ b/modules/claim/tryton.cfg
@@ -6,7 +6,7 @@ depends:
     currency_cog
     company_cog
     benefit
-    insurance_contract
+    contract_insurance
 xml:
     claim.xml
     party.xml
