--- a/modules/contract_insurance_health_fr/tryton.cfg
+++ b/modules/contract_insurance_health_fr/tryton.cfg
@@ -5,7 +5,7 @@ depends:
     cog_utils
     party_fr
     health
-    insurance_contract
+    contract_insurance
 xml:
     health.xml
     party.xml
