--- a/modules/life_billing_collective_fr/tryton.cfg
+++ b/modules/life_billing_collective_fr/tryton.cfg
@@ -5,7 +5,7 @@ depends:
     cog_utils
     table
     life_product
-    insurance_contract
+    contract_insurance
     contract_group
     billing_individual
 xml:
