Renaming module life_billing_collective_fr with billing_group_life_fr

--- a/modules/test_module/tryton.cfg
+++ b/modules/test_module/tryton.cfg
@@ -2,7 +2,7 @@
 depends:
     account_payment_cog
     loan
-    life_billing_collective_fr
+    billing_group_life_fr
     party_cog
     life_contract_subscription
     contract_insurance
