--- a/test_case/test_case.cfg
+++ b/test_case/test_case.cfg
@@ -30,6 +30,6 @@ modules:
     billing_individual
     account_payment_cog
     account_payment_sepa_cog
-    life_billing_collective_fr
+    billing_group_life_fr
     collection_insurance
     contract_cash_value
