Renaming module life_claim with claim_life

--- a/modules/test_module/tryton.cfg
+++ b/modules/test_module/tryton.cfg
@@ -33,7 +33,7 @@ depends:
     table
     property_product
     country_cog
-    life_claim
+    claim_life
     contract_cash_value
     process
     contract_group
