Renaming module life_claim_process with claim_life_process

--- a/modules/test_module/tryton.cfg
+++ b/modules/test_module/tryton.cfg
@@ -12,7 +12,7 @@ depends:
     company_cog
     distribution
     account_payment_sepa_cog
-    life_claim_process
+    claim_life_process
     collection_insurance
     claim_process
     billing_individual
