--- a/test_case/test_case.cfg
+++ b/test_case/test_case.cfg
@@ -21,7 +21,7 @@ modules:
     life_contract_subscription
     task_manager
     process_cog
-    life_claim_process
+    claim_life_process
     loan_claim
     contract_group_process
     commission
