Renaming module life_contract with contract_life

--- a/modules/contract_cash_value/tryton.cfg
+++ b/modules/contract_cash_value/tryton.cfg
@@ -4,7 +4,7 @@ depends:
     res
     collection
     contract_insurance
-    life_contract
+    contract_life
     offered_cash_value
     life_contract_subscription
 xml:
