--- a/modules/test_module/tryton.cfg
+++ b/modules/test_module/tryton.cfg
@@ -26,7 +26,7 @@ depends:
     contract_group_process
     task_manager
     rule_engine
-    life_contract
+    contract_life
     offered_distribution
     offered
     contract
