Renaming module life_product with offered_life

--- a/modules/billing_group_life_fr/tryton.cfg
+++ b/modules/billing_group_life_fr/tryton.cfg
@@ -4,7 +4,7 @@ depends:
     res
     cog_utils
     table
-    life_product
+    offered_life
     contract_insurance
     contract_group
     billing_individual
