--- a/modules/test_module/tryton.cfg
+++ b/modules/test_module/tryton.cfg
@@ -39,7 +39,7 @@ depends:
     contract_group
     offered_insurance
     account_payment
-    life_product
+    offered_life
     health
     process_cog
     offered_cash_value
