Renaming module life_contract_subscription with contract_life_process

--- a/modules/test_module/tryton.cfg
+++ b/modules/test_module/tryton.cfg
@@ -4,7 +4,7 @@ depends:
     loan
     billing_group_life_fr
     party_cog
-    life_contract_subscription
+    contract_life_process
     contract_insurance
     endorsement
     contract_insurance_health_fr
