--- a/test_case/test_case.cfg
+++ b/test_case/test_case.cfg
@@ -18,7 +18,7 @@ modules:
     table
     contract_insurance_health_fr
     property_product
-    life_contract_subscription
+    contract_life_process
     task_manager
     process_cog
     claim_life_process
