--- a/modules/contract_cash_value/tryton.cfg
+++ b/modules/contract_cash_value/tryton.cfg
@@ -6,7 +6,7 @@ depends:
     contract_insurance
     contract_life
     offered_cash_value
-    life_contract_subscription
+    contract_life_process
 xml:
     contract.xml
     wizard.xml
