Renaming module loan_claim with claim_credit

--- a/modules/test_module/tryton.cfg
+++ b/modules/test_module/tryton.cfg
@@ -44,7 +44,7 @@ depends:
     process_cog
     offered_cash_value
     bank_fr
-    loan_claim
+    claim_credit
     party_fr
     claim
     billing
