--- a/test_case/test_case.cfg
+++ b/test_case/test_case.cfg
@@ -22,7 +22,7 @@ modules:
     task_manager
     process_cog
     claim_life_process
-    loan_claim
+    claim_credit
     contract_group_process
     commission
     commission_group
