Renaming module property_product with offered_property_casualty

--- a/modules/test_module/tryton.cfg
+++ b/modules/test_module/tryton.cfg
@@ -31,7 +31,7 @@ depends:
     offered
     contract
     table
-    property_product
+    offered_property_casualty
     country_cog
     claim_life
     contract_cash_value
