--- a/test_case/test_case.cfg
+++ b/test_case/test_case.cfg
@@ -17,7 +17,7 @@ modules:
     bank_fr
     table
     contract_insurance_health_fr
-    property_product
+    offered_property_casualty
     contract_life_process
     task_manager
     process_cog
