Fix loan dependency, should depends of life

--- a/modules/loan/tryton.cfg
+++ b/modules/loan/tryton.cfg
@@ -4,7 +4,7 @@ depends:
     res
     bank
     offered_insurance
-    contract_insurance
+    contract_life
     billing_individual
 xml:
     loan.xml
