--- a/modules/offered_insurance/tryton.cfg
+++ b/modules/offered_insurance/tryton.cfg
@@ -12,6 +12,8 @@ xml:
     coverage.xml
     business_rule/business_rule.xml
     business_rule/premium_rule.xml
+    business_rule/extra_premium.xml
+    business_rule/exclusion.xml
     business_rule/eligibility_rule.xml
     business_rule/coverage_amount_rule.xml
     business_rule/clause_rule.xml
