Add clause modules to test_module dependencies

--- a/modules/test_module/tryton.cfg
+++ b/modules/test_module/tryton.cfg
@@ -49,4 +49,11 @@ depends:
     claim
     billing
     account_cog
+    clause
+    clause_insurance
+    clause_life
+    contract_clause
+    contract_insurance_clause
+    contract_life_clause
+    contract_loan_clause
 xml:
