--- a/modules/test_module/tryton.cfg
+++ b/modules/test_module/tryton.cfg
@@ -50,9 +50,8 @@ depends:
     billing
     account_cog
     clause
-    clause_insurance
-    clause_life
+    offered_clause
+    offered_life_clause
     contract_clause
     contract_life_clause
-    contract_loan_clause
 xml:
