Module commission require contract_insurance_invoice module

--- a/modules/commission/tryton.cfg
+++ b/modules/commission/tryton.cfg
@@ -5,6 +5,7 @@ depends:
     cog_utils
     contract_insurance
     distribution
+    contract_insurance_invoice
 xml:
     offered.xml
     contract.xml
