Person Synthesis first iteration

--- a/modules/account_payment_cog/tryton.cfg
+++ b/modules/account_payment_cog/tryton.cfg
@@ -2,11 +2,13 @@
 depends:
     account
     account_payment
+    party
     company_cog
     billing_individual
     ir
     cog_utils
 xml:
+    icon.xml
     payment.xml
     account.xml
     contract.xml
