--- a/modules/contract_insurance_invoice/tryton.cfg
+++ b/modules/contract_insurance_invoice/tryton.cfg
@@ -2,9 +2,11 @@
 depends:
     account
     account_invoice
+    party
     contract
     contract_insurance
 xml:
+    icon.xml
     contract.xml
     invoice.xml
     offered.xml
