--- a/modules/contract_insurance_invoice/tryton.cfg
+++ b/modules/contract_insurance_invoice/tryton.cfg
@@ -5,9 +5,10 @@ depends:
     party
     contract
     contract_insurance
+    bank_cog
 xml:
     product.xml
     icon.xml
-    contract.xml
     invoice.xml
+    contract.xml
     offered.xml
