Update existing Test Cases

--- a/modules/account_payment_cog/tryton.cfg
+++ b/modules/account_payment_cog/tryton.cfg
@@ -1,8 +1,8 @@
 [tryton]
 depends:
-    account
+    account_cog
     account_payment
-    party
+    party_cog
     company_cog
     ir
     cog_utils
