--- a/modules/contract_insurance_invoice/tryton.cfg
+++ b/modules/contract_insurance_invoice/tryton.cfg
@@ -1,8 +1,8 @@
 [tryton]
 depends:
     account
-    account_invoice
-    party
+    account_invoice_cog
+    party_cog
     contract
     contract_insurance
     bank_cog
