--- a/modules/account_statement_cog/tryton.cfg
+++ b/modules/account_statement_cog/tryton.cfg
@@ -2,5 +2,11 @@
 depends:
     ir
     res
+    cog_utils
+    account_cog
+    account_invoice_cog
+    company_cog
+    currency_cog
+    party_cog
     account_statement
 xml:
