Add french insurance accounting configuration - Update test case Remove SEPA Sequence in journal Ability to select an account template in the test case

--- a/modules/account_payment_sepa_cog/tryton.cfg
+++ b/modules/account_payment_sepa_cog/tryton.cfg
@@ -1,11 +1,12 @@
 [tryton]
 depends:
     ir
+    account_cog
     account_payment_cog
     company_cog
     bank_cog
     party_cog
     account_payment_sepa
 xml:
-    payment.xml
     bank.xml
+    test_case.xml
