endorsement_loan : Add contract payment preview
review http://rietveld.coopengo.com/3170002/

--- a/modules/endorsement_loan/tryton.cfg
+++ b/modules/endorsement_loan/tryton.cfg
@@ -5,6 +5,8 @@ depends:
     loan
     endorsement
     endorsement_insurance
+    endorsement_insurance_invoice
+    contract_loan_invoice
 xml:
     offered.xml
     endorsement.xml
