endorsement : Move full_contract_revision to a dedicated module
Fix #798
review http://rietveld.coopengo.com/9170001/

--- a/modules/endorsement_full_contract_revision/tryton.cfg
+++ b/modules/endorsement_full_contract_revision/tryton.cfg
@@ -3,9 +3,7 @@ depends:
     ir
     res
     process_cog
-    offered
-    contract
+    endorsement
 xml:
-    endorsement.xml
     offered.xml
     wizard.xml
