Migration remove views, step #1 review : http://rietveld.coopengo.com/1390003/

--- a/modules/offered_distribution/tryton.cfg
+++ b/modules/offered_distribution/tryton.cfg
@@ -3,8 +3,8 @@ depends:
     ir
     res
     cog_utils
+    contract
     distribution
-    commission
 xml:
     distribution.xml
     contract.xml
