coopbusiness : Add failure action on payment journal

--- a/modules/contract_insurance_payment/tryton.cfg
+++ b/modules/contract_insurance_payment/tryton.cfg
@@ -5,10 +5,8 @@ depends:
     cog_utils
     party_cog
     company_cog
-    account_payment
+    account_payment_cog
     account_cog
+    contract_insurance_invoice
 xml:
-    icon.xml
-    account.xml
-    move.xml
     payment.xml
