cog_utils: create conf files from template files. fix #1133
review http://rietveld.coopengo.com/9400001/

--- a/defaults/tryton.conf
+++ b/defaults/tryton.conf
@@ -4,23 +4,24 @@ profile = Test
 expanded = True
 port = 8000
 server = localhost
-db = Test
+db = $DATABASE
 
 [client]
 save_tree_expanded_state = True
-default_height = 744
+default_height = 800
 language_direction = ltr
 form_tab = top
 lang = fr_FR
 modepda = False
+save_tree_state = True
 toolbar = default
-default_width = 1317
+default_width = 1280
 save_width_height = True
 maximize = True
 
 [menu]
 pane = 220
+expanded = True
 
 [form]
 statusbar = True
-
