account_payment_cog : FIX #975 create reject fee invoice

--- a/modules/account_payment_cog/tryton.cfg
+++ b/modules/account_payment_cog/tryton.cfg
@@ -6,6 +6,8 @@ depends:
     party_cog
     company_cog
     account_payment
+# TODO : remove premium dependency
+    premium
     account_cog
 xml:
     icon.xml
