offered_insurance: Start deprecating business rule, move files review : http://rietveld.coopengo.com/2640001/

--- a/modules/offered_insurance/tryton.cfg
+++ b/modules/offered_insurance/tryton.cfg
@@ -13,8 +13,8 @@ xml:
     offered.xml
     coverage.xml
     business_rule/business_rule.xml
-    business_rule/extra_premium.xml
-    business_rule/exclusion.xml
+    extra_premium.xml
+    exclusion.xml
     business_rule/coverage_amount_rule.xml
     business_rule/document_rule.xml
     business_rule/term_renewal_rule.xml
