--- a/defaults/logging.conf
+++ b/defaults/logging.conf
@@ -2,9 +2,9 @@
 keys = root
 
 [logger_root]
-handlers = stream
+handlers = file, stream
 level = DEBUG
-# handlers = stream, (rotating_)file
+# handlers = stream, rotating_file, file, color_stream 
 
 [formatters]
 keys = basic
@@ -14,9 +14,9 @@ keys = basic
 format = [%(asctime)s] %(levelname)s:%(name)s:%(message)s
 datefmt = %a %b %d %H:%M:%S %Y
 
+# 'keys' option should match logger_root 'handlers' option
 [handlers]
 keys = file, stream
-# keys = file, color_stream
 
 [handler_file]
 class = FileHandler
@@ -29,7 +29,7 @@ args = ('$WORKSPACE/logs/logfile.log', )
 class=handlers.RotatingFileHandler
 level=DEBUG
 args=('$WORKSPACE/logs/logfile.log', 'a', 2000, 100)
-formatter=logfileformatter
+formatter=basic
 
 [handler_stream]
 class = StreamHandler
