commission_insurance: Generate automatic payment for broker Fix #1467: https://redmine.coopengo.com/issues/1467 http://rietveld.coopengo.com/10100001

--- a/modules/commission_insurance/tryton.cfg
+++ b/modules/commission_insurance/tryton.cfg
@@ -5,6 +5,7 @@ depends:
     cog_utils
     product_cog
     contract_insurance_invoice
+    account_payment_cog
     commission
     distribution
 xml:
@@ -12,3 +13,4 @@ xml:
     contract.xml
     commission.xml
     party.xml
+    payment.xml
