contract_insurance_invoice : Add wizard to change bank account
Fix #1419
review http://rietveld.coopengo.com/9790001

--- a/modules/endorsement_insurance_invoice/tryton.cfg
+++ b/modules/endorsement_insurance_invoice/tryton.cfg
@@ -4,6 +4,8 @@ depends:
     res
     contract_insurance_invoice
     endorsement
+extra_depends:
+    account_payment_sepa_contract
 xml:
     endorsement.xml
     offered.xml
