account_payment_cog: Improve reject payment management Fix #1549: https://redmine.coopengo.com/issues/1549 http://rietveld.coopengo.com/11170002

--- a/modules/account_payment_sepa_contract/tryton.cfg
+++ b/modules/account_payment_sepa_contract/tryton.cfg
@@ -3,8 +3,9 @@ depends:
     ir
     res
     cog_utils
-    account_payment_sepa
+    account_payment_sepa_cog
     contract_insurance_invoice
+    contract_insurance_payment
 xml:
     contract.xml
     invoice.xml
