contract_term_renewal : add module, fix #1178 fix #1575 fix #1179 fix #1566 fix #1228 fix #1560 http://rietveld.coopengo.com/12040001/

--- a/modules/contract_insurance_invoice/tryton.cfg
+++ b/modules/contract_insurance_invoice/tryton.cfg
@@ -9,6 +9,8 @@ depends:
     contract_insurance
     bank_cog
     premium_insurance
+extra_depends:
+    contract_term_renewal
 xml:
     product.xml
     invoice.xml
