--- a/modules/contract_set_insurance_invoice/tryton.cfg
+++ b/modules/contract_set_insurance_invoice/tryton.cfg
@@ -5,6 +5,8 @@ depends:
     contract_set
     contract_insurance_invoice
     report_engine
+extra_depends:
+    contract_term_renewal
 xml:
     contract.xml
     account.xml
