contract_insurance_document_request: Use rule_mixin for documents rule Fix #1229: https://redmine.coopengo.com/issues/1229 http://rietveld.coopengo.com/11340001

--- a/modules/contract_insurance_document_request/tryton.cfg
+++ b/modules/contract_insurance_document_request/tryton.cfg
@@ -3,8 +3,10 @@ depends:
     ir
     res
     cog_utils
+    rule_engine
     document_request
     offered_insurance
-    contract
+    contract_insurance
 xml:
     offered.xml
+    contract.xml
