commission_prepayment_rule_engine: Define prepayment amount with rule engine Fix #1892: https://redmine.coopengo.com/issues/1892 http://rietveld.coopengo.com/16060001

--- a/modules/commission_prepayment_rule_engine/tryton.cfg
+++ b/modules/commission_prepayment_rule_engine/tryton.cfg
@@ -3,7 +3,10 @@ depends:
     ir
     res
     cog_utils
+    commission_insurance_rule_engine
     commission_insurance_prepayment
     rule_engine
 xml:
     commission.xml
+    rule_engine.xml
+    rule_template.xml
