commission_multi_agents: Manage multi agent for prepayment http://rietveld.coopengo.com/11430001

--- a/modules/commission_multi_agents/tryton.cfg
+++ b/modules/commission_multi_agents/tryton.cfg
@@ -5,5 +5,7 @@ depends:
     cog_utils
     commission
     commission_insurance
+extra_depends:
+    commission_insurance_prepayment
 xml:
     commission.xml
