account_payment_cog: Allow to print a report model when rejecting a payment Fix #1945: https://redmine.coopengo.com/issues/1945 http://rietveld.coopengo.com/18000001

--- a/modules/account_payment_cog/tryton.cfg
+++ b/modules/account_payment_cog/tryton.cfg
@@ -8,6 +8,7 @@ depends:
     account_payment
 # TODO : remove premium dependency
     premium
+    report_engine
     account_cog
 xml:
     icon.xml
