coopbusiness: Fix extras_depend option review: http://rietveld.coopengo.com/15110001/

--- a/modules/contract_set_insurance_invoice/tryton.cfg
+++ b/modules/contract_set_insurance_invoice/tryton.cfg
@@ -5,7 +5,7 @@ depends:
     contract_set
     contract_insurance_invoice
     report_engine
-extra_depends:
+extras_depend:
     contract_term_renewal
 xml:
     contract.xml
