--- a/modules/commission_multi_agents/tryton.cfg
+++ b/modules/commission_multi_agents/tryton.cfg
@@ -5,7 +5,7 @@ depends:
     cog_utils
     commission
     commission_insurance
-extra_depends:
+extras_depend:
     commission_insurance_prepayment
 xml:
     commission.xml
