--- a/modules/contract_insurance_invoice/tryton.cfg
+++ b/modules/contract_insurance_invoice/tryton.cfg
@@ -9,7 +9,7 @@ depends:
     contract_insurance
     bank_cog
     premium_insurance
-extra_depends:
+extras_depend:
     contract_term_renewal
 xml:
     product.xml
