account_payment_cog: Display information on the invoice if a payment is planned Fix #1839 review: http://rietveld.coopengo.com/8960001/

--- a/modules/account_payment_cog/tryton.cfg
+++ b/modules/account_payment_cog/tryton.cfg
@@ -10,9 +10,12 @@ depends:
     premium
     report_engine
     account_cog
+extras_depend:
+    account_invoice
 xml:
     icon.xml
     account.xml
     move.xml
     payment.xml
     party.xml
+    invoice.xml
