report_engine: Enable one click printing or mail Fix #1362 review: http://rietveld.coopengo.com/16110001/

--- a/modules/contract/tryton.cfg
+++ b/modules/contract/tryton.cfg
@@ -5,6 +5,8 @@ depends:
     cog_utils
     company_cog
     offered
+extras_depend:
+    report_engine
 xml:
     icon.xml
     contract.xml
@@ -17,3 +19,4 @@ xml:
     configuration.xml
     sub_status.xml
     event_type.xml
+    report.xml
