endorsement_insurance_invoice : Fix dependencies
review http://rietveld.coopengo.com/13340002

--- a/modules/endorsement_insurance_invoice/tryton.cfg
+++ b/modules/endorsement_insurance_invoice/tryton.cfg
@@ -3,7 +3,8 @@ depends:
     ir
     res
     contract_insurance_invoice
-    endorsement
+    endorsement_insurance
+    endorsement_premium
 xml:
     endorsement.xml
     offered.xml
