claim: Add specific claim bank account per covered_element Fix #2276: https://redmine.coopengo.com/issues/2276 http://rietveld.coopengo.com/16350001

--- a/modules/claim_health/tryton.cfg
+++ b/modules/claim_health/tryton.cfg
@@ -3,6 +3,11 @@ depends:
     ir
     res
     claim
+    health
     benefit_health
+extra_depends:
+    endorsement_insurance
 xml:
     claim.xml
+    contract.xml
+    wizard.xml
