endorsement_insurance_invoice : Properly set contract rebill required on configured endorsement parts
review http://rietveld.coopengo.com/17360002

--- a/modules/endorsement_renewal/tryton.cfg
+++ b/modules/endorsement_renewal/tryton.cfg
@@ -3,6 +3,8 @@ depends:
     ir
     res
     contract_term_renewal
+extras_depend:
+    endorsement_insurance_invoice
 xml:
     offered.xml
     wizard.xml
