commission_orias: New module Fix #2112 review: http://rietveld.coopengo.com/12780001/

--- a/modules/commission_insurance/tryton.cfg
+++ b/modules/commission_insurance/tryton.cfg
@@ -5,6 +5,7 @@ depends:
     cog_utils
     product_cog
     contract_insurance_invoice
+    account_cog
     account_payment_cog
     commission
     distribution
