account_party_balance: Remove bank_account field (#2150)
Fix #0000

--- a/modules/account_party_balance/tryton.cfg
+++ b/modules/account_party_balance/tryton.cfg
@@ -9,6 +9,7 @@ depends:
     contract_insurance_invoice
     account_payment_cog
     account_statement_cog
+    account_payment_sepa_contract
 xml:
     move.xml
     authorizations.xml
