--- a/modules/contract_reduction/tryton.cfg
+++ b/modules/contract_reduction/tryton.cfg
@@ -7,6 +7,7 @@ depends:
     rule_engine
     contract_insurance
 extras_depend:
+    contract_insurance_invoice_dunning
     contract_insurance_invoice
     contract_surrender
     endorsement
