claim_group_life_fr: Add default indemnification rules (#2194)
Fix #9940

--- a/modules/claim_salary_fr/tryton.cfg
+++ b/modules/claim_salary_fr/tryton.cfg
@@ -10,8 +10,10 @@ depends:
     document
 extras_depend:
     endorsement_option_benefit
+    table
 xml:
     claim.xml
+    table.xml
     rule_engine.xml
     contract.xml
     wizard.xml
