contract_reduction: The reduction of a renewable contract should remove its end date (#2207)
* contract_reduction: The reduction of a renewable contract should remove its end date and prevent further renewal
Fix #9977

--- a/modules/contract_reduction/tryton.cfg
+++ b/modules/contract_reduction/tryton.cfg
@@ -11,6 +11,7 @@ extras_depend:
     contract_insurance_invoice
     contract_surrender
     endorsement
+    contract_term_renewal
 xml:
     icons.xml
     sub_status.xml
