party_ssn: Move SSN to specific module (#2164)
* party_ssn: Move SSN to specific module
Fix #4242

--- a/modules/endorsement_party/tryton.cfg
+++ b/modules/endorsement_party/tryton.cfg
@@ -7,6 +7,8 @@ depends:
     endorsement
     endorsement_insurance
     contract_insurance
+extras_depend:
+    party_ssn
 xml:
     offered.xml
     endorsement.xml
