commission_insurance: New tool to simulate commissions from a product (#2188)
Fix #9242

--- a/modules/commission_insurance/tryton.cfg
+++ b/modules/commission_insurance/tryton.cfg
@@ -17,6 +17,7 @@ extras_depend:
     report_engine_email
     report_engine_flow
     contract_process
+    contract_term_renewal
 xml:
     icons.xml
     commission.xml
@@ -30,3 +31,4 @@ xml:
     authorizations.xml
     offered.xml
     distribution.xml
+    wizard.xml
