--- a/modules/contract_reduction/tryton.cfg
+++ b/modules/contract_reduction/tryton.cfg
@@ -12,6 +12,7 @@ extras_depend:
     contract_surrender
     endorsement
     contract_term_renewal
+    commission_insurance
 xml:
     icons.xml
     sub_status.xml
